# rag-multimodal-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  template.env
.github/workflows/: ci.yaml  quality.yaml
app/: server.py
backend/: __init__.py  database.py
backend/api_plugins/: __init__.py
backend/api_plugins/lib/: user_management.py
backend/api_plugins/secure_authentication/: secure_authentication.py
backend/api_plugins/sessions/: sessions.py
backend/rag_1/: __init__.py  chain.py  config.py  config.yaml  ingest.py  notebook.ipynb  prompts.py
backend/rag_2/: __init__.py  chain.py  config.py  config.yaml  ingest.py  notebook.ipynb  prompts.py
backend/rag_3/: __init__.py  chain.py  config.py  config.yaml  ingest.py  notebook.ipynb  prompts.py
backend/rag_components/: __init__.py  chat_message_history.py  elements.py  ingest.py  llm.py  retriever.py  summarization.py  unstructured.py  vectorstore.py
backend/rag_components/chain_links/: __init__.py  condense_question.py  rag_with_history.py  retrieve_and_format_multimodal_docs.py  retrieve_and_format_text_docs.py
backend/utils/: __init__.py  elements.py  image.py  llm.py  multi_vector.py  retriever.py  summarization.py  unstructured.py  utils.py  vectorstore.py
frontend/: __init__.py  front.py
frontend/lib/: auth.py  basic_chat.py  session_chat.py  sidebar.py  utils.py
tests/backend/rag_components/: test_elements.py
tests/backend/utils/: test_elements.py
