[tool.poetry]
name = "rag-multimodal-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
unstructured = "^0.12.5"
pdf2image = "^1.17.0"
pdfminer-six = "^20231228"
pillow-heif = "^0.15.0"
opencv-python = "^4.9.0.80"
unstructured-inference = "^0.7.24"
pikepdf = "^8.13.0"
unstructured-pytesseract = "^0.3.12"
hydra-core = "^1.3.2"
tenacity = "^8.2.3"
openai = "^1.13.3"
langchain = "^0.1.11"
langchain-openai = "^0.0.8"
python-dotenv = "^1.0.1"
chromadb = "^0.4.24"
langserve = "^0.0.46"
sse-starlette = "^2.0.0"
pydantic = "^1.10.14"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
